# ethjsonrpc

./: README.md  pyproject.toml
ethjsonrpc/: .env.example  client.py  constants.py  eth_client.py  main.py  utils.py
