[tool.poetry]
name = "ethjsonrpc"
version = "0.1.0"
description = ""
authors = ["Clément Walter <clement0walter@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
starknet-py = "^0.14.0a0"
fastapi = "^0.94.1"
pydantic = "^1.10.6"
uvicorn = "^0.21.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
web3 = "6.0.0b2"
python-dotenv = "^0.21.0"
eth-account = "<0.8.0"
autoflake = "^2.0.0"
py-evm = "0.6.1a2"
eth-keys = "^0.4.0"
eth-abi = "^3.0.1"
eth-utils = "^2.1.0"
requests = "^2.28.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
